--- a/src/templates/OnboardingGoalsAdmin/edit.latte
+++ b/src/templates/OnboardingGoalsAdmin/edit.latte
@@ -4,12 +4,12 @@
 
 <div class="row">
   <div class="col-md-12">
-    <a n:href="Default"><i class="fa fa-angle-left"></i> {_products.admin.products.edit.back}</a>
+    <a n:href="Default"><i class="fa fa-angle-left"></i> {_onboarding.admin.onboarding_goals.edit.back}</a>
     <div class="page-header">
       <h1>
-        {_products.admin.products.edit.title}
-        <small>[{$product->id}]</small>
-        {$product->name}
+        {_onboarding.admin.onboarding_goals.edit.title}
+        <small>[{$goal->id}]</small>
+        {$goal->name}
       </h1>
     </div>
   </div>
@@ -17,6 +17,6 @@
 
 <div class="row">
   <div class="col-md-8">
-    {control productsForm}
+    {control onboardingGoalForm}
   </div>
 </div>
