--- a/src/templates/OnboardingGoalsAdmin/new.latte
+++ b/src/templates/OnboardingGoalsAdmin/new.latte
@@ -1,13 +1,13 @@
-{block #title}{_products.admin.products.new.title}{/block}
+{block #title}{_onboarding.admin.onboarding_goals.new.title}{/block}
 
 {block #content}
 
 <div class="row">
   <div class="col-md-12">
-    <a n:href="Default"><i class="fa fa-angle-left"></i> {_products.admin.products.new.back}</a>
+    <a n:href="Default"><i class="fa fa-angle-left"></i> {_onboarding.admin.onboarding_goals.new.back}</a>
     <div class="page-header">
       <h1>
-        {_products.admin.products.new.title}
+        {_onboarding.admin.onboarding_goals.new.title}
       </h1>
     </div>
   </div>
@@ -15,6 +15,6 @@
 
 <div class="row">
   <div class="col-md-8">
-    {control productsForm}
+    {control onboardingGoalForm}
   </div>
 </div>
