--- a/src/templates/OnboardingGoalsAdmin/show.latte
+++ b/src/templates/OnboardingGoalsAdmin/show.latte
@@ -35,3 +35,9 @@
         </ul>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+        {control googleGoalCompletionCountGraph, 'id' => $goal->id}
+    </div>
+</div>
