--- a/src/templates/OnboardingGoalsAdmin/show.latte
+++ b/src/templates/OnboardingGoalsAdmin/show.latte
@@ -34,6 +34,10 @@
             </li>
         </ul>
     </div>
+
+    <div class="col-md-6">
+        {control googleSankeyDistributionGraph, 'id' => $goal->id}
+    </div>
 </div>
 
 <div class="row">
