--- a/src/templates/OnboardingGoalsAdmin/edit.latte
+++ b/src/templates/OnboardingGoalsAdmin/edit.latte
@@ -1,4 +1,4 @@
-{block #title}{_products.admin.products.edit.title}{/block}
+{block #title}{_onboarding.admin.onboarding_goals.edit.title}{/block}
 
 {block #content}
 
